tests/src/frontend/typechecking/invalid/mutable_lambda_in_immutable.sk
mutable class Foo(() -> void)

fun test(): void {
  _foo = Foo(() -> void)
}
